Keycloak/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - image: jboss/keycloak:12.0.0 
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        args: ["-Dkeycloak.profile.feature.docker=enabled","-b 0.0.0.0"]
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 0.5Gi
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data
          name: data
      volumes:
      - persistentVolumeClaim:
          claimName: pvc-keycloak
        name: data
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - name: http
    port: 30004
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     layer: L4
#     protocol: tcp
#   name: keycloak
# spec:
#   backend:
#     serviceName: keycloak
#     servicePort: 30004
